--- a/ConsoleApp3/ConsoleApp3.csproj
+++ b/ConsoleApp3/ConsoleApp3.csproj
@@ -45,9 +45,11 @@
     <Compile Include="BaseClass.cs" />
     <Compile Include="Bird.cs" />
     <Compile Include="DerivedClss.cs" />
+    <Compile Include="InterfaceFly.cs" />
     <Compile Include="Magpie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmallBird.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
